--- a/Consumo_API/index.html
+++ b/Consumo_API/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumir una API</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
     <div id="contenedor">
         
     </div>
-    <script src="./main.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
